[mobile] fix categories top gap

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -12,3 +12,7 @@ button#create-topic {
   bottom: 5px;
   right: 5px;
 }
+
+.display-search-banner #main-outlet {
+  padding-top: 1.5em;
+}
